[metadata]
name = attack-eye
version = 1.0
description = Attack Eye: A Subdomain Enumeration & Attack Surface Mapping Tool.
author = Obad Zafar
author_email = zafarobad@gmail.com
url = https://github.com/NCCS-LAB/Attack-Eye

[options]
include_package_data = True
packages = find:
install_requires =
    Django>=3.0
    requests>=2.22.0
    dnspython>=1.16.0
    tldextract>=2.2.2
    colorama>=0.4.3
    ipwhois>=1.1.0
    pandas>=1.0.5

[options.extras_require]
dev =
    black
    flake8
    isort
    coverage
    pytest
    pytest-cov

[flake8]
exclude = migrations
max-line-length = 120

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings
addopts = --cov --cov-report html
